--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@gluestack-ui/nativewind-utils": "^1.0.26",
-    "@gluestack-ui/overlay": "^0.1.16",
-    "@gluestack-ui/toast": "^1.0.8",
     "@react-navigation/native": "^6.0.2",
+    "@tamagui/lucide-icons": "^1.120.1",
+    "@tamagui/metro-plugin": "^1.120.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
+    "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -39,12 +38,17 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.2.0",
+    "react-native-svg": "^15.10.1",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "tamagui": "^1.120.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tamagui/babel-plugin": "^1.120.1",
+    "@tamagui/cli": "^1.120.1",
+    "@tamagui/config": "^1.120.1",
+    "@tamagui/static": "^1.120.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
