--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "7.0.14",
     "@tamagui/lucide-icons": "^1.120.1",
     "@tamagui/metro-plugin": "^1.120.1",
+    "@tamagui/toast": "^1.121.5",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "^52.0.21",
     "expo-constants": "~17.0.3",
