--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tamagui/metro-plugin": "^1.120.1",
     "@tamagui/toast": "^1.121.5",
     "babel-plugin-module-resolver": "^5.0.2",
+    "burnt": "^0.12.2",
     "expo": "^52.0.21",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
