--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-font": "~13.0.2",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.14",
+    "expo-secure-store": "^14.0.1",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
