remove tab headers & safe areas

--- a/.tamagui/tamagui.config.json
+++ b/.tamagui/tamagui.config.json
@@ -6,17 +6,7 @@
         "Stack": {
           "staticConfig": {
             "acceptsClassName": true,
-            "defaultProps": {
-              "display": "flex",
-              "alignItems": "stretch",
-              "flexDirection": "column",
-              "flexBasis": "auto",
-              "boxSizing": "border-box",
-              "position": "relative",
-              "minHeight": 0,
-              "minWidth": 0,
-              "flexShrink": 0
-            },
+            "defaultProps": {},
             "validStyles": {
               "enterStyle": true,
               "exitStyle": true,
@@ -25,7 +15,6 @@
               "focusStyle": true,
               "disabledStyle": true,
               "focusWithinStyle": true,
-              "focusVisibleStyle": true,
               "backfaceVisibility": true,
               "borderBottomEndRadius": true,
               "borderBottomStartRadius": true,
@@ -129,8 +118,6 @@
               "color": true,
               "textDecorationColor": true,
               "textShadowColor": true,
-              "outlineColor": true,
-              "caretColor": true,
               "borderRadius": true,
               "borderTopLeftRadius": true,
               "borderTopRightRadius": true,
@@ -200,64 +187,7 @@
               "scaleZ": true,
               "shadowOpacity": true,
               "boxShadow": true,
-              "filter": true,
-              "transition": true,
-              "textWrap": true,
-              "backdropFilter": true,
-              "background": true,
-              "backgroundAttachment": true,
-              "backgroundBlendMode": true,
-              "backgroundClip": true,
-              "backgroundImage": true,
-              "backgroundOrigin": true,
-              "backgroundPosition": true,
-              "backgroundRepeat": true,
-              "backgroundSize": true,
-              "borderBottomStyle": true,
-              "borderImage": true,
-              "borderLeftStyle": true,
-              "borderRightStyle": true,
-              "borderTopStyle": true,
-              "boxSizing": true,
-              "clipPath": true,
-              "contain": true,
-              "containerType": true,
-              "content": true,
-              "cursor": true,
-              "float": true,
-              "mask": true,
-              "maskBorder": true,
-              "maskBorderMode": true,
-              "maskBorderOutset": true,
-              "maskBorderRepeat": true,
-              "maskBorderSlice": true,
-              "maskBorderSource": true,
-              "maskBorderWidth": true,
-              "maskClip": true,
-              "maskComposite": true,
-              "maskImage": true,
-              "maskMode": true,
-              "maskOrigin": true,
-              "maskPosition": true,
-              "maskRepeat": true,
-              "maskSize": true,
-              "maskType": true,
-              "mixBlendMode": true,
-              "objectFit": true,
-              "objectPosition": true,
-              "outlineOffset": true,
-              "outlineStyle": true,
-              "outlineWidth": true,
-              "overflowBlock": true,
-              "overflowInline": true,
-              "overflowX": true,
-              "overflowY": true,
-              "pointerEvents": true,
-              "scrollbarWidth": true,
-              "textEmphasis": true,
-              "touchAction": true,
-              "transformStyle": true,
-              "userSelect": true
+              "filter": true
             }
           }
         },
@@ -267,47 +197,20 @@
             "isText": true,
             "defaultProps": {
               "fontFamily": "unset",
-              "display": "inline",
-              "boxSizing": "border-box",
-              "wordWrap": "break-word",
-              "whiteSpace": "pre-wrap",
-              "margin": 0
+              "suppressHighlighting": true
             },
             "inlineWhenUnflattened": {},
             "variants": {
-              "numberOfLines": {
-                "1": {
-                  "maxWidth": "100%",
-                  "overflow": "hidden",
-                  "textOverflow": "ellipsis",
-                  "whiteSpace": "nowrap"
-                },
-                ":number": "Function"
-              },
-              "selectable": {
-                "true": {
-                  "userSelect": "text",
-                  "cursor": "text"
-                },
-                "false": {
-                  "userSelect": "none",
-                  "cursor": "default"
-                }
-              },
               "ellipse": {
                 "true": {
-                  "maxWidth": "100%",
-                  "overflow": "hidden",
-                  "textOverflow": "ellipsis",
-                  "whiteSpace": "nowrap"
+                  "numberOfLines": 1,
+                  "lineBreakMode": "clip"
                 }
               },
               "ellipsis": {
                 "true": {
-                  "maxWidth": "100%",
-                  "overflow": "hidden",
-                  "textOverflow": "ellipsis",
-                  "whiteSpace": "nowrap"
+                  "numberOfLines": 1,
+                  "lineBreakMode": "clip"
                 }
               }
             },
@@ -319,7 +222,6 @@
               "focusStyle": true,
               "disabledStyle": true,
               "focusWithinStyle": true,
-              "focusVisibleStyle": true,
               "backfaceVisibility": true,
               "borderBottomEndRadius": true,
               "borderBottomStartRadius": true,
@@ -423,8 +325,6 @@
               "color": true,
               "textDecorationColor": true,
               "textShadowColor": true,
-              "outlineColor": true,
-              "caretColor": true,
               "borderRadius": true,
               "borderTopLeftRadius": true,
               "borderTopRightRadius": true,
@@ -495,63 +395,6 @@
               "shadowOpacity": true,
               "boxShadow": true,
               "filter": true,
-              "transition": true,
-              "textWrap": true,
-              "backdropFilter": true,
-              "background": true,
-              "backgroundAttachment": true,
-              "backgroundBlendMode": true,
-              "backgroundClip": true,
-              "backgroundImage": true,
-              "backgroundOrigin": true,
-              "backgroundPosition": true,
-              "backgroundRepeat": true,
-              "backgroundSize": true,
-              "borderBottomStyle": true,
-              "borderImage": true,
-              "borderLeftStyle": true,
-              "borderRightStyle": true,
-              "borderTopStyle": true,
-              "boxSizing": true,
-              "clipPath": true,
-              "contain": true,
-              "containerType": true,
-              "content": true,
-              "cursor": true,
-              "float": true,
-              "mask": true,
-              "maskBorder": true,
-              "maskBorderMode": true,
-              "maskBorderOutset": true,
-              "maskBorderRepeat": true,
-              "maskBorderSlice": true,
-              "maskBorderSource": true,
-              "maskBorderWidth": true,
-              "maskClip": true,
-              "maskComposite": true,
-              "maskImage": true,
-              "maskMode": true,
-              "maskOrigin": true,
-              "maskPosition": true,
-              "maskRepeat": true,
-              "maskSize": true,
-              "maskType": true,
-              "mixBlendMode": true,
-              "objectFit": true,
-              "objectPosition": true,
-              "outlineOffset": true,
-              "outlineStyle": true,
-              "outlineWidth": true,
-              "overflowBlock": true,
-              "overflowInline": true,
-              "overflowX": true,
-              "overflowY": true,
-              "pointerEvents": true,
-              "scrollbarWidth": true,
-              "textEmphasis": true,
-              "touchAction": true,
-              "transformStyle": true,
-              "userSelect": true,
               "fontFamily": true,
               "fontSize": true,
               "fontStyle": true,
@@ -564,30 +407,16 @@
               "textDecorationStyle": true,
               "textShadowOffset": true,
               "textShadowRadius": true,
+              "userSelect": true,
               "selectable": true,
-              "verticalAlign": true,
-              "whiteSpace": true,
-              "wordWrap": true,
-              "textOverflow": true,
-              "textDecorationDistance": true,
-              "WebkitBoxOrient": true
+              "verticalAlign": true
             }
           }
         },
         "View": {
           "staticConfig": {
             "acceptsClassName": true,
-            "defaultProps": {
-              "display": "flex",
-              "alignItems": "stretch",
-              "flexDirection": "column",
-              "flexBasis": "auto",
-              "boxSizing": "border-box",
-              "position": "relative",
-              "minHeight": 0,
-              "minWidth": 0,
-              "flexShrink": 0
-            },
+            "defaultProps": {},
             "validStyles": {
               "enterStyle": true,
               "exitStyle": true,
@@ -596,7 +425,6 @@
               "focusStyle": true,
               "disabledStyle": true,
               "focusWithinStyle": true,
-              "focusVisibleStyle": true,
               "backfaceVisibility": true,
               "borderBottomEndRadius": true,
               "borderBottomStartRadius": true,
@@ -700,8 +528,6 @@
               "color": true,
               "textDecorationColor": true,
               "textShadowColor": true,
-              "outlineColor": true,
-              "caretColor": true,
               "borderRadius": true,
               "borderTopLeftRadius": true,
               "borderTopRightRadius": true,
@@ -771,64 +597,7 @@
               "scaleZ": true,
               "shadowOpacity": true,
               "boxShadow": true,
-              "filter": true,
-              "transition": true,
-              "textWrap": true,
-              "backdropFilter": true,
-              "background": true,
-              "backgroundAttachment": true,
-              "backgroundBlendMode": true,
-              "backgroundClip": true,
-              "backgroundImage": true,
-              "backgroundOrigin": true,
-              "backgroundPosition": true,
-              "backgroundRepeat": true,
-              "backgroundSize": true,
-              "borderBottomStyle": true,
-              "borderImage": true,
-              "borderLeftStyle": true,
-              "borderRightStyle": true,
-              "borderTopStyle": true,
-              "boxSizing": true,
-              "clipPath": true,
-              "contain": true,
-              "containerType": true,
-              "content": true,
-              "cursor": true,
-              "float": true,
-              "mask": true,
-              "maskBorder": true,
-              "maskBorderMode": true,
-              "maskBorderOutset": true,
-              "maskBorderRepeat": true,
-              "maskBorderSlice": true,
-              "maskBorderSource": true,
-              "maskBorderWidth": true,
-              "maskClip": true,
-              "maskComposite": true,
-              "maskImage": true,
-              "maskMode": true,
-              "maskOrigin": true,
-              "maskPosition": true,
-              "maskRepeat": true,
-              "maskSize": true,
-              "maskType": true,
-              "mixBlendMode": true,
-              "objectFit": true,
-              "objectPosition": true,
-              "outlineOffset": true,
-              "outlineStyle": true,
-              "outlineWidth": true,
-              "overflowBlock": true,
-              "overflowInline": true,
-              "overflowX": true,
-              "overflowY": true,
-              "pointerEvents": true,
-              "scrollbarWidth": true,
-              "textEmphasis": true,
-              "touchAction": true,
-              "transformStyle": true,
-              "userSelect": true
+              "filter": true
             }
           }
         },
@@ -845,7 +614,6 @@
               "focusStyle": true,
               "disabledStyle": true,
               "focusWithinStyle": true,
-              "focusVisibleStyle": true,
               "backfaceVisibility": true,
               "borderBottomEndRadius": true,
               "borderBottomStartRadius": true,
@@ -949,8 +717,6 @@
               "color": true,
               "textDecorationColor": true,
               "textShadowColor": true,
-              "outlineColor": true,
-              "caretColor": true,
               "borderRadius": true,
               "borderTopLeftRadius": true,
               "borderTopRightRadius": true,
@@ -1020,75 +786,9 @@
               "scaleZ": true,
               "shadowOpacity": true,
               "boxShadow": true,
-              "filter": true,
-              "transition": true,
-              "textWrap": true,
-              "backdropFilter": true,
-              "background": true,
-              "backgroundAttachment": true,
-              "backgroundBlendMode": true,
-              "backgroundClip": true,
-              "backgroundImage": true,
-              "backgroundOrigin": true,
-              "backgroundPosition": true,
-              "backgroundRepeat": true,
-              "backgroundSize": true,
-              "borderBottomStyle": true,
-              "borderImage": true,
-              "borderLeftStyle": true,
-              "borderRightStyle": true,
-              "borderTopStyle": true,
-              "boxSizing": true,
-              "clipPath": true,
-              "contain": true,
-              "containerType": true,
-              "content": true,
-              "cursor": true,
-              "float": true,
-              "mask": true,
-              "maskBorder": true,
-              "maskBorderMode": true,
-              "maskBorderOutset": true,
-              "maskBorderRepeat": true,
-              "maskBorderSlice": true,
-              "maskBorderSource": true,
-              "maskBorderWidth": true,
-              "maskClip": true,
-              "maskComposite": true,
-              "maskImage": true,
-              "maskMode": true,
-              "maskOrigin": true,
-              "maskPosition": true,
-              "maskRepeat": true,
-              "maskSize": true,
-              "maskType": true,
-              "mixBlendMode": true,
-              "objectFit": true,
-              "objectPosition": true,
-              "outlineOffset": true,
-              "outlineStyle": true,
-              "outlineWidth": true,
-              "overflowBlock": true,
-              "overflowInline": true,
-              "overflowX": true,
-              "overflowY": true,
-              "pointerEvents": true,
-              "scrollbarWidth": true,
-              "textEmphasis": true,
-              "touchAction": true,
-              "transformStyle": true,
-              "userSelect": true
+              "filter": true
             },
             "defaultProps": {
-              "display": "flex",
-              "alignItems": "stretch",
-              "flexDirection": "column",
-              "flexBasis": "auto",
-              "boxSizing": "border-box",
-              "position": "relative",
-              "minHeight": 0,
-              "minWidth": 0,
-              "flexShrink": 0,
               "tag": "span",
               "size": true,
               "pointerEvents": "none"
