--- a/package.json
+++ b/package.json
@@ -57,9 +57,17 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.2",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-native": "^5.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "jscodeshift": "^0.15.2",
+    "prettier": "^3.4.2",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
