--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^15.1.3",
     "@tamagui/babel-plugin": "^1.120.1",
     "@tamagui/cli": "^1.120.1",
     "@tamagui/config": "^1.120.1",
