--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@react-navigation/native": "^7.0.14",
     "@tamagui/lucide-icons": "^1.120.1",
     "@tamagui/metro-plugin": "^1.120.1",
+    "@tamagui/theme-builder": "^1.125.12",
     "@tamagui/toast": "^1.121.5",
+    "ajv": "^8.17.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "burnt": "^0.12.2",
     "expo": "^52.0.21",
@@ -37,13 +39,13 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "^0.76.7",
     "react-native-css-interop": "^0.1.22",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "^4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.16",
@@ -53,8 +55,8 @@
     "@babel/core": "^7.20.0",
     "@react-native-community/cli": "^15.1.3",
     "@tamagui/babel-plugin": "^1.120.1",
-    "@tamagui/cli": "^1.120.1",
-    "@tamagui/config": "^1.120.1",
+    "@tamagui/cli": "^1.125.12",
+    "@tamagui/config": "^1.125.12",
     "@tamagui/static": "^1.120.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
@@ -67,7 +69,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-native": "^5.0.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "^52.0.5",
     "jscodeshift": "^0.15.2",
     "prettier": "^3.4.2",
     "react-test-renderer": "18.2.0",
