--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
+    "react-native-toast-notifications": "^3.4.0",
     "react-native-ui-datepicker": "^3.0.5",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.16",
