--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-css-interop": "^0.1.22",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.20.2",
