--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-web-browser": "~14.0.1",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "moti": "^0.30.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
