--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "moment": "^2.30.1",
     "moti": "^0.30.0",
     "nativewind": "^4.1.23",
+    "phosphor-react-native": "^2.3.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
@@ -47,7 +48,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "^15.8.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-ui-datepicker": "^3.0.5",
     "react-native-web": "~0.19.10",
