--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-native-css-interop": "^0.1.22",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-gifted-charts": "^1.4.58",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
