--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-svg": "^15.8.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-ui-datepicker": "^3.0.5",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.16",
     "tamagui": "^1.120.1"
@@ -66,6 +67,7 @@
     "@tamagui/static": "^1.120.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
